# mtmon

./: README.md
.githooks/: pre-commit
.github/workflows/: build-backend-image.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 5c1c9eb61394_add_relay_node_to_packet_gateway_links.py  75f9edc0b83b_initial_schema.py
backend/backend/: db.py  main.py  models.py  packet_handler.py  sa_types.py  schemas.py  ws_connection_handler.py
frontend/: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  router.tsx
frontend/src/components/: DirectNodesDialog.tsx  MultipleSelector.tsx  NodeDetailsDialog.tsx  NodeInfoPanel.tsx  NodeList.tsx  NodeSelector.tsx  PacketMonitor.tsx  mode-toggle.tsx
frontend/src/components/stats/: NoisyNodesTable.tsx  PacketTypeStatsChart.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  calendar.tsx  dialog.tsx  select.tsx
frontend/src/layouts/: MenuLayout.tsx
frontend/src/lib/: config.ts  linkUtils.ts  types.ts  utils.ts
frontend/src/lib/utils/: formatters.tsx
frontend/src/pages/: DashboardPage.tsx  GraphPage.tsx  MapPage.tsx  NodePacketsPage.tsx  PacketPage.tsx  StatsPage.tsx
frontend/src/providers/: StateProvider.tsx
